[package]
name = "bio-wasm-app"
version = "0.1.0"
edition = "2021"
description = "Client-side bioinformatics FASTA/FASTQ toolkit powered by Rust + WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
regex = "1"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "s"
lto = true
